--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,22 @@
 /* This file is for your main application CSS */
 @import "./phoenix.css";
 
+/* My css */
+.invalid-feedback {
+    color: red;
+    text-transform: capitalize;
+    position: relative;
+    top: 20px;
+    font-size: 0.8em;
+}
+
+.form-group {
+    position: relative;
+    margin-bottom: 25px;
+}
+
+
+
 /* Alerts and form errors used by phx.new */
 .alert {
   padding: 15px;
