--- a/lib/discuss_web/templates/topic/edit.html.heex
+++ b/lib/discuss_web/templates/topic/edit.html.heex
@@ -1,7 +1,8 @@
-<%=form_for @changeset, Routes.topic_path(@conn, :create), fn form_object -> %>
+<%= form_for @changeset, Routes.topic_path(@conn, :update, @topic), fn form_object -> %>
     <div class="form-group">
         <%= text_input(form_object, :title, placeholder: "Title", class: "form-control") %>
         <%= error_tag(form_object, :title) %>
     </div>
-    <%= submit "Save Topic", class: "btn btn-primary btn-submit" %>
+
+    <%= submit("Save Topic", class: "btn btn-primary") %>
 <% end %>
