--- a/lib/discuss_web/templates/layout/root.html.heex
+++ b/lib/discuss_web/templates/layout/root.html.heex
@@ -17,6 +17,17 @@
         <a href="/" class="brand-logo">
           Discussions
         </a>
+        <ul class="right">
+          <%= if @conn.assigns.user.id do %>
+            <li>
+              <%= link "Sign out", to: Routes.auth_path(@conn, :sign_out), method: "delete" %>
+            </li>
+          <% else %>
+            <li>
+              <%= link "Sign in with GitHub", to: Routes.auth_path(@conn, :request, "github") %>
+            </li>
+          <% end %>
+        </ul>
       </div>
     </nav>
     <%= @inner_content %>
