--- a/lib/discuss_web/templates/topic/index.html.heex
+++ b/lib/discuss_web/templates/topic/index.html.heex
@@ -4,17 +4,20 @@
     <%= for topic <- @topics do %>
         <li class="collection-item">
             <%= topic.title %>
-            <div class="right">
-                <%= link("Edit", to: Routes.topic_path(@conn, :edit, topic)) %>
-                <!-- we need :method bc link/2 automatically makes GET request -->
-                <%= link("Delete", to: Routes.topic_path(@conn, :delete, topic), method: :delete) %>
-            </div>
+            <%= if @conn.assigns.user.id == topic.user_id do %>
+                <div class="right">
+                    <%= link("Edit", to: Routes.topic_path(@conn, :edit, topic)) %>
+                    <!-- we need :method bc link/2 automatically makes GET request -->
+                    <%= link("Delete", to: Routes.topic_path(@conn, :delete, topic), method: :delete) %>
+                </div>
+            <% end %>
         </li>
     <% end %>
-
-    <div class = "fixed-action-btn">
-        <%= link to: Routes.topic_path(@conn, :new), class: "btn-floating btn-large waves-effect waves-light red" do %> <!-- need to adjust css-->
-            <i class = "material-icons">add</i>
-        <% end %>
-    </div>
+    <%= if @conn.assigns.user.id do %>
+        <div class = "fixed-action-btn">
+            <%= link to: Routes.topic_path(@conn, :new), class: "btn-floating btn-large waves-effect waves-light red" do %> <!-- need to adjust css-->
+                <i class = "material-icons">add</i>
+            <% end %>
+        </div>
+    <% end %>
 </ul>
