--- a/lib/discuss_web/templates/topic/index.html.heex
+++ b/lib/discuss_web/templates/topic/index.html.heex
@@ -3,12 +3,12 @@
 <ul class="collection">
     <%= for topic <- @topics do %>
         <li class="collection-item">
-            <%= link(topic.title, to: Routes.topic_path(@conn, :show, topic)) %>
+            <%= link(topic.title, to: Routes.topic_path(@conn, :show, topic), class: "topic-title") %>
             <%= if @conn.assigns.user.id == topic.user_id do %>
                 <div class="right">
-                    <%= link("Edit", to: Routes.topic_path(@conn, :edit, topic)) %>
+                    <%= link("Edit", to: Routes.topic_path(@conn, :edit, topic), class: "topic-edit") %>
                     <!-- we need :method bc link/2 automatically makes GET request -->
-                    <%= link("Delete", to: Routes.topic_path(@conn, :delete, topic), method: :delete) %>
+                    <%= link("Delete", to: Routes.topic_path(@conn, :delete, topic), class: "topic-delete", method: :delete) %>
                 </div>
             <% end %>
         </li>
