--- a/lib/discuss_web/templates/topic/index.html.heex
+++ b/lib/discuss_web/templates/topic/index.html.heex
@@ -3,6 +3,8 @@
 <ul class="collection">
     <%= for topic <- @topics do %>
         <li class="collection-item">
+            <% identicon = "/images/" <> (topic.identicon |> Path.basename() || "no-file.png")%>
+            <img class="topic-image" src={Routes.static_path(@conn, identicon)} />
             <%= link(topic.title, to: Routes.topic_path(@conn, :show, topic), class: "topic-title") %>
             <%= if @conn.assigns.user.id == topic.user_id do %>
                 <div class="right">
